ALL STAGES IN IPYNB DONE

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,10 @@ dmypy.json
 *.jpg
 *.zip
 logs/
+artifacts/prepare_base_model/base_model_updated.h5
+research/st_04.ipynb
+artifacts/prepare_base_model/base_model.h5
+artifacts/prepare_callbacks/checkpoint_dir/model.h5
+artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-10-14-22-39-48/train/events.out.tfevents.1665767393.LAPTOP-4AF2E2F7.22460.0.v2
+artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-10-14-22-39-48/validation/events.out.tfevents.1665771574.LAPTOP-4AF2E2F7.22460.1.v2
+artifacts/training/model.h5
